--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttm-react-library-test",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Made with create-react-library",
   "author": "apavlovspb",
   "license": "MIT",
@@ -46,7 +46,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "node-sass": "^4.12.0",
+    "postcss-scss": "^2.0.0",
+    "css-loader": "^2.1.1"
   },
   "files": [
     "dist"
