--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ttm-react-library-test",
+  "name": "ttm-react-library",
   "version": "1.0.6",
   "description": "Made with create-react-library",
   "author": "apavlovspb",
